# PanchangICSGenerator

./: .gitignore  config.py  ics_generator.py  pyproject.toml  requirements.txt  scraper.py
