[tool.poetry]
name = "PanchangICSGenerator"
version = "0.1.0"
description = "A package for generating ICS files from Panchang data."
authors = ["Armesh <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
icalendar = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"